example and some reviews

--- a/Geekhub_Babiy_Alexander/home4/assets/index.html
+++ b/Geekhub_Babiy_Alexander/home4/assets/index.html
@@ -17,15 +17,15 @@
             <img src="img/mic.png" alt="">
             <img src="img/search.png" alt="">
         </span>
-        <ul class="line">
-            <li class="line1">Все</li>
-            <li class="line1">Картинки</li>
-            <li class="line1">Видео</li>
-            <li class="line1">Новости</li>
-            <li class="line1">Книги</li>
-            <li class="line1">Ещё</li>
-            <li class="line1">Настройки</li>
-            <li class="tools line1">Инструменты</li>
+        <ul class="list">
+            <li class="list-item">Все</li>
+            <li class="list-item">Картинки</li>
+            <li class="list-item">Видео</li>
+            <li class="list-item">Новости</li>
+            <li class="list-item">Книги</li>
+            <li class="list-item">Ещё</li>
+            <li class="list-item">Настройки</li>
+            <li class="tools list-item">Инструменты</li>
         </ul>
         <span class="icon2">
             <img src="img/dots.png" alt="">
