--- a/Geekhub_Khandus_Alexandra/home04/index.html
+++ b/Geekhub_Khandus_Alexandra/home04/index.html
@@ -16,17 +16,17 @@
             </div>
             <div class="search">
                 <input name="search" type="text">
-                    <div class="keyboardVoice" >
-                        <a class="keyboard" href="#" aria-label="Транслітерація">
-                           <img src="//www.gstatic.com/inputtools/images/tia.png">
-                        </a>
-                        <a class="voice" href="#" aria-label="Пошук голосом">
-                            <img src="img/voice.jpg">
-                        </a>
-                        <a class="searchBtn" href="#" aria-label="Пошук">
-                            <img src="img/search.jpg">
-                        </a>
-                    </div>
+                <div class="keyboardVoice">
+                    <a class="keyboard" href="#" aria-label="Транслітерація">
+                        <img src="//www.gstatic.com/inputtools/images/tia.png">
+                    </a>
+                    <a class="voice" href="#" aria-label="Пошук голосом">
+                        <img src="img/voice.jpg">
+                    </a>
+                    <a class="searchBtn" href="#" aria-label="Пошук">
+                        <img src="img/search.jpg">
+                    </a>
+                </div>
             </div>
         </div>
         <div class="right">
@@ -77,52 +77,64 @@
     <p>Приблизна кількість результатів: 29 400 000 (0,36 сек.)</p>
     <ul>
         <li>
-        <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</a>
-        <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="link">https://www.w3schools.com/cssref/css_selectors.asp</a>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-            ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-            fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
-    </li>
-        <li>
-            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a>
+            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet,
+                consectetuer adipiscing elit</a>
             <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="link">https://www.w3schools.com/cssref/css_selectors.asp</a>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                 Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
                 ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis
+                vitae, justo.</p>
         </li>
         <li>
-            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a>
+            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet,
+                consectetuer adipiscing elit.</a>
             <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="link">https://www.w3schools.com/cssref/css_selectors.asp</a>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                 Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
                 ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis
+                vitae, justo.</p>
         </li>
         <li>
-            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a>
+            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet,
+                consectetuer adipiscing elit.</a>
             <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="link">https://www.w3schools.com/cssref/css_selectors.asp</a>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                 Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
                 ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis
+                vitae, justo.</p>
         </li>
         <li>
-            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a>
+            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet,
+                consectetuer adipiscing elit.</a>
             <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="link">https://www.w3schools.com/cssref/css_selectors.asp</a>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                 Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
                 ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis
+                vitae, justo.</p>
         </li>
         <li>
-            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a>
+            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet,
+                consectetuer adipiscing elit.</a>
             <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="link">https://www.w3schools.com/cssref/css_selectors.asp</a>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                 Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
                 ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis
+                vitae, justo.</p>
+        </li>
+        <li>
+            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="titleLink">Lorem ipsum dolor sit amet,
+                consectetuer adipiscing elit.</a>
+            <a href="https://www.w3schools.com/cssref/css_selectors.asp" class="link">https://www.w3schools.com/cssref/css_selectors.asp</a>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+                ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+                fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis
+                vitae, justo.</p>
         </li>
 
 
