--- a/Geekhub_Hrebeniuk_Ivan/Home4/index.html
+++ b/Geekhub_Hrebeniuk_Ivan/Home4/index.html
@@ -26,7 +26,7 @@
         <img src="./assets/img/ava.jpg" alt="Аккаунт Google" title="Аккаунт Google" id="person">
       </form>
       <nav>
-        <a href="#1" id="active_choice_all">Все</a>
+        <a href="#1" id="active-choice-all">Все</a>
         <a href="#">Картинки</a>
         <a href="#">Видео</a>
         <a href="#">Новости</a>
@@ -123,7 +123,8 @@
         </ul>
       </div>
 
-      <div class="link-result">
+      <div class="link-result" id="1">
+        <h2>TUT</h2>
         <a href="#">
           <p class="title-link">CSS Selectors Reference - W3Schools</p>
           <p class="value-link">https://www.w3schools.com/cssref/css_selectors.asp</p>
